# py-faster-rcnn

lib/faster_rcnn/: CMakeLists.txt
lib/faster_rcnn/src/: roi_pooling_layer.cpp  smooth_L1_loss_layer.cpp  smooth_L1_loss_layer.cu
models/coco/VGG16/fast_rcnn/: test.prototxt  train.prototxt
models/coco/VGG16/faster_rcnn_end2end/: test.prototxt  train.prototxt
models/coco/VGG_CNN_M_1024/fast_rcnn/: test.prototxt  train.prototxt
models/coco/VGG_CNN_M_1024/faster_rcnn_end2end/: test.prototxt  train.prototxt
models/pascal_voc/VGG16/fast_rcnn/: test.prototxt  train.prototxt
models/pascal_voc/VGG16/faster_rcnn_alt_opt/: faster_rcnn_test.pt  stage1_fast_rcnn_train.pt  stage1_rpn_train.pt  stage2_fast_rcnn_train.pt  stage2_rpn_train.pt
models/pascal_voc/VGG16/faster_rcnn_end2end/: test.prototxt  train.prototxt
models/pascal_voc/VGG_CNN_M_1024/fast_rcnn/: test.prototxt  train.prototxt
models/pascal_voc/VGG_CNN_M_1024/faster_rcnn_alt_opt/: faster_rcnn_test.pt  stage1_fast_rcnn_train.pt  stage1_rpn_train.pt  stage2_fast_rcnn_train.pt  stage2_rpn_train.pt
models/pascal_voc/VGG_CNN_M_1024/faster_rcnn_end2end/: test.prototxt  train.prototxt
models/pascal_voc/ZF/fast_rcnn/: test.prototxt  train.prototxt
models/pascal_voc/ZF/faster_rcnn_alt_opt/: faster_rcnn_test.pt  stage1_fast_rcnn_train.pt  stage1_rpn_train.pt  stage2_fast_rcnn_train.pt  stage2_rpn_train.pt
models/pascal_voc/ZF/faster_rcnn_end2end/: test.prototxt  train.prototxt
